// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Forms: <Error /> matches snapshot 1`] = `
<div>
  <article
    class="css-gbf80r-errorContainer-errorContainer"
  >
    Something went wrong
  </article>
</div>
`;

exports[`Forms: <Error.InputError /> matches snapshot 1`] = `
<div>
  <span
    class="css-1b2rqxw-inputError-inputError"
  >
    Something went wrong
  </span>
</div>
`;
